# spot-key

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_installer.py  installer.iss  pyproject.toml  spot_key.py  take_screenshot.py  test_flicker.py  test_spot_key.py  visual_test.py
.claude/skills/python-refactor/: SKILL.md
.github/workflows/: build.yml
docs/deep-dives/: catching-one-frame-flicker.md  smooth-circles-without-pixelation.md
spot_key/: __init__.py  __main__.py  app.py  keys.py  models.py  persistence.py  settings.py  tray.py  win32.py
